--- a/desafio10.html
+++ b/desafio10.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como surgiu o mascote do android?</title>
-    <link rel="shortcut icon" href="../imagens10/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens10/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -30,19 +30,19 @@
                 <h2 class="tópico sub">A primeira versão</h2>
                 <p class="parágrafo">A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a class="externo" href="">Dan Morrill</a>. Ele conta que abriu o <a class="externo" href="">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a sua equipe, não existia nenhuma solicitação da empresa para a criaçao de um mascote.</p>
                 <picture>
-                    <source media="(max-width: 500px)" srcset="../imagens10/dan-droids-pq.png">
-                    <img class="image" src="../imagens10/dan-droids.png" alt="">
+                    <source media="(max-width: 500px)" srcset="imagens10/dan-droids-pq.png">
+                    <img class="image" src="imagens10/dan-droids.png" alt="">
                 </picture>
                 <p class="parágrafo">Essa primeira versão bizrra até foi batizada em homenagem ao seu cridor: seriam os Dandroids.</p>
                 <h2 class="tópico sub">Surge um novo mascote</h2>
                 <p class="parágrafo">A ideia de ter um masscote foi amadurecendo e a misssão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robê de uma maneira mais agradável.</p>
                 <picture>
-                    <source media="(max-width: 500px)" srcset="../imagens10/irina-blok-pq.jpg">
-                    <img class="image" src="../imagens10/irina-blok.jpg" alt="">
+                    <source media="(max-width: 500px)" srcset="imagens10/irina-blok-pq.jpg">
+                    <img class="image" src="imagens10/irina-blok.jpg" alt="">
                 </picture>
                 <p class="parágrafo">A ideia principal da irina era representar tudo graficamente com pucos traços e de forma mais chapada. O desenho também deveria gerar idenficação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.</p>
                 <picture>
-                    <img class="image pequena" src="../imagens10/bugdroid.png" alt="">
+                    <img class="image pequena" src="imagens10/bugdroid.png" alt="">
                 </picture>
                 <p class="parágrafo">A principal inspiraçao para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indiar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
             </article>
